test/error/sem/ifConditionless.tig
let
    
in
	if () then (
		let
			var forknive:= 10/10
		in
		
		end
	)
end
